knowledge_base/knowledge/v15/capl/structured/Obsolete/coGetLocalState.md
# coGetLocalState

> Category: `Obsolete` | Type: `notes`

## Description

See Also

| Deprecated Function Replaced by CANopen Basic Functions. |  |  |  |  |
|---|---|---|---|---|
| Function Syntax | dword coGetLocalState( dword errCode[] ); |  |  |  |
| Function | This function returns the current communication state of the node. It is not necessary to determine the state permanently since a state change is signaled by the event function coOnNodeChangedState. |  |  |  |
| Parameters | errCode Error code buffer (is entered in index 0 of the field |  |  |  |
| Return Values | Current communication state of the node 4 - stopped5 - operational6 - reset node7 - reset communication127 - pre-operational The states reset node and reset communication are transient states. This means they are not static and are only run through. The node then automatically goes to state pre-operational. |  |  |  |
| Availability | Up to Version | Restricted To | Measurement Setup | Simulation/Test Setup |
| 6.0-9.0 SP6 | CANopen | — | • |  |
| Example dword errCode[1];if (coGetLocalState( errCode ) == 5) { /* change process data */} |  |  |  |  |

| Version 15© Vector Informatik GmbH |
|---|
